Fixed intellij errors